@@ -1,5 +1,9 @@
 2009-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* configure.ac: Define _GNU_SOURCE and _NETBSD_SOURCE so that
+	pwrite() and pread() prototypes are available under GNU Linux and
+	NetBSD.
+
 	* magick/render.c (TracePath): Fix access one beyond the end of
 	the points array.
 
